--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
       <dl>
         <dt>Stato:</dt>
         <dd>{{currentState}}</dd>
+        <dt>Access Token:</dt>
+        <dd>{{accessToken}}</dd>
       </dl>
     </div>
   </section>
