--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
         <dd>{{currentState}}</dd>
         <dt>Access Token:</dt>
         <dd>{{accessToken}}</dd>
+        <dt>User:</dt>
+        <dd>{{user}}</dd>
       </dl>
     </div>
   </section>
