--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,6 +39,10 @@ main{
       float: left;
       width: 60%;
       padding: .25em 0;
+      max-width: 20vw;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     dl:after {content:"";display:table;clear:both;}
     }
