--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ main{
   display: flex;
   align-items: center;
   & section{
-    height: 40vh;
+    height: auto;
     width: 70vw;
     margin-left:15vw;
     margin-right:15vw;
